@@ -24,6 +24,7 @@
  */
 package co.elastic.apm.agent.util;
 
+import co.elastic.apm.agent.premain.ThreadUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
