@@ -22,7 +22,7 @@
  * under the License.
  * #L%
  */
-package co.elastic.apm.agent.util;
+package co.elastic.apm.agent.premain;
 
 import javax.annotation.Nullable;
 
@@ -134,12 +134,20 @@ public class JvmRuntimeInfo {
         return majorVersion;
     }
 
+    public static int getUpdateVersion() {
+        return updateVersion;
+    }
+
     public static boolean isJ9VM() {
         return isJ9;
     }
 
-    public static boolean isIsHpUx(){
+    public static boolean isHpUx() {
         return isHpUx;
+    }
+
+    public static boolean isHotSpot() {
+        return isHotSpot;
     }
 
     /**
@@ -173,7 +181,7 @@ public class JvmRuntimeInfo {
         // versions prior to that have unreliable invoke dynamic support according to https://groovy-lang.org/indy.html
         int java7min = 60;
         int java8min = 40;
-        if (isIsHpUx()) {
+        if (isHpUx()) {
             java7min = 10; // hotspot 7u65
             java8min = 2; // hotspot 8u45
         }
