@@ -64,6 +64,7 @@
         <module>apm-agent-attach</module>
         <module>apm-agent-plugin-sdk</module>
         <module>apm-indy-bootstrap-module</module>
+        <module>apm-agent-premain</module>
     </modules>
 
     <properties>
